feat(chat): remove AI clients and switch to internal rule-based chat logic